fix: fix wrap warning in scss

--- a/src/scss/components/contact/contact-us.scss
+++ b/src/scss/components/contact/contact-us.scss
@@ -153,16 +153,22 @@
 
   &__input {
     @include from-main-input;
-    font-size: clamp(13px, 16px, 1.5vw);
-    height: 52px;
-    padding: 10px 15px;
+
+    & {
+      font-size: clamp(13px, 16px, 1.5vw);
+      height: 52px;
+      padding: 10px 15px;
+    }
   }
 
   &__textarea {
     @include from-main-textarea;
-    font-size: clamp(13px, 16px, 1.5vw);
-    height: 128px;
-    padding-top: 13px;
+
+    & {
+      font-size: clamp(13px, 16px, 1.5vw);
+      height: 128px;
+      padding-top: 13px;
+    }
   }
 
   &__radio:checked + &__label-radio {
