--- a/src/scss/components/single-news/single-news-form.scss
+++ b/src/scss/components/single-news/single-news-form.scss
@@ -7,7 +7,9 @@
   &__body {
     @include title-content-gap;
 
-    gap: 48px;
+    & {
+      gap: 48px;
+    }
   }
 
   &__title {
@@ -54,29 +56,34 @@
 
   &__input {
     @include from-main-input;
-    font-size: clamp(13px, 16px, 1.5vw);
-    height: 52px;
 
-    @media (max-width: $mobile) {
-      height: auto;
+    & {
+      font-size: clamp(13px, 16px, 1.5vw);
+      height: 52px;
+
+      @media (max-width: $mobile) {
+        height: auto;
+      }
     }
   }
 
   &__textarea {
     @include from-main-input;
 
-    font-size: clamp(13px, 16px, 1.5vw);
-    padding: 13px 10px 9px 15px;
-    width: 100%;
-    height: 100px;
-    resize: none;
+    & {
+      font-size: clamp(13px, 16px, 1.5vw);
+      padding: 13px 10px 9px 15px;
+      width: 100%;
+      height: 100px;
+      resize: none;
 
-    @media (max-width: $tablet) {
-      padding: 10px 10px 9px 15px;
-    }
+      @media (max-width: $tablet) {
+        padding: 10px 10px 9px 15px;
+      }
 
-    @media (max-width: $mobile) {
-      padding: 8px;
+      @media (max-width: $mobile) {
+        padding: 8px;
+      }
     }
   }
 
