--- a/src/scss/components/template/discuss-details.scss
+++ b/src/scss/components/template/discuss-details.scss
@@ -106,7 +106,9 @@
   &__textarea {
     @include from-main-textarea;
 
-    height: 66px;
+    & {
+      height: 66px;
+    }
   }
 
   &__checkbox-wrapper {
